# aws-geospatial-itc

./: .gitignore  Introduction-to-Cloud.md  Readme.md  pyproject.toml  workload.ipynb
